...
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/action_add_diary_entry"
        android:src="@drawable/ic_add" />
...
